# HW5

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml  task_2_test.yaml  task_2_test.yml
src/hw5_yu_stas/: python_script.py  test_*.py
tests/: tests.py
